--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+.picture-item {
+  width: 400px;
+  height: 300px;
+  object-fit: cover;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.modal-pic {
+  width: 1000px;
+  height: 700px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
-
-.App-link {
-  color: #61dafb;
+.modal1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dark-mode {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
+}
+.modalcont {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.dark {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+button {
+  position: absolute;
+  top: 50%;
+  background-color: transparent;
+  border-radius: 30px;
+  font-family: monospace;
+  font-size: 20px;
+  font-weight: 600;
+  color: #3f00ffad;
+  z-index: 1000;
+}
+.prev {
+  left: 1%;
+}
+.next {
+  right: 1%;
 }
